# OpeNPDN

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  Makefile  README.md  install.sh  requirements.txt  visualize.m
doc/: congest_format.txt  congestion_example.rpt  template_definition.md  tool_config.md
input/: PDN.cfg  tech_spec.json  template_definition.json  tool_config.json
output/: IR_drop.csv  IR_drop.rpt  congestion_map.csv  current_map.csv  template_map.txt
params/: IR_params.json  grid_params.json  templates.csv
scripts/: build.py  clean_release.py  create_training_set.py  data_gen.sh  multiply_4.py  run_batch_iterative.py
src/: CNN.py  CNN_synth_training.py  IR_map_generator.py  OpeNPDN.tcl  T6_PSI_settings.py  TL_CNN_training.py  TL_data_gen.py  analyze_power_grid.tcl  cnn.py  cnn_inference.py  cnn_input.py  cnn_train.py  construct_eqn.py  construct_eqn_new.py  create_template.py  create_template_new.py  current_map_generator.py  current_mapgen.py  eliminate_templates.py  generate_training_data.py  generate_training_data_iterative.py  grid.py  inference.py  ir_solver.py  node.py  simulated_annealer.py  simulated_annealing.py  synthetic_data_gen.py  template_construction.py  template_elimination.py  test_T6_PSI_settings.py  test_contruct_eqn.py  test_current_map_generator.py  test_simulated_annealer.py  test_template_construction.py  voltage_gen.py
templates/: README.md  refined_template_list.txt  template_obj_0.npz  template_obj_1.npz  template_obj_2.npz  template_obj_3.npz  template_obj_4.npz  template_obj_5.npz  template_obj_6.npz  (+2 more)
(+39 files in other folders)
